@@ -103,6 +103,7 @@ Release 0.19.0 - Unreleased
                and no stop flag given.
    HBASE-900   Regionserver memory leak causing OOME during relatively
                modest bulk importing; part 1
+   HBASE-1054  Index NPE on scanning (Clint Morgan via Andrew Purtell)
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
